--- a/UI/package.json
+++ b/UI/package.json
@@ -12,25 +12,25 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~10.0.12",
-    "@angular/common": "~10.0.12",
-    "@angular/compiler": "~10.0.12",
-    "@angular/core": "~10.0.12",
-    "@angular/forms": "~10.0.12",
-    "@angular/platform-browser": "~10.0.12",
-    "@angular/platform-browser-dynamic": "~10.0.12",
-    "@angular/router": "~10.0.12",
+    "@angular/animations": "^10.0.14",
+    "@angular/common": "^10.0.14",
+    "@angular/compiler": "^10.0.14",
+    "@angular/core": "^10.0.14",
+    "@angular/forms": "^10.0.14",
+    "@angular/platform-browser": "^10.0.14",
+    "@angular/platform-browser-dynamic": "^10.0.14",
+    "@angular/router": "^10.0.14",
     "rxjs": "~6.6.2",
     "zone.js": "^0.11.1"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.1000.6",
-    "@angular/cli": "~10.0.6",
-    "@angular/compiler-cli": "~10.0.12",
-    "@types/jasmine": "^3.5.13",
+    "@angular-devkit/build-angular": "^0.1000.8",
+    "@angular/cli": "^10.0.8",
+    "@angular/compiler-cli": "^10.0.14",
+    "@types/jasmine": "^3.5.14",
     "@types/jasminewd2": "~2.0.3",
     "@types/jquery": "^3.5.1",
-    "@types/node": "^14.6.0",
+    "@types/node": "^14.6.1",
     "codelyzer": "^6.0.0",
     "jasmine-core": "~3.6.0",
     "jasmine-spec-reporter": "~5.0.0",
