Add files for SEO and 404 error

--- a/UI/angular.json
+++ b/UI/angular.json
@@ -25,6 +25,9 @@
             "aot": true,
             "assets": [
               "src/favicon.ico",
+              "src/error.html",
+              "src/robots.txt",
+              "src/sitemap.xml",
               "src/assets"
             ],
             "styles": [
