--- a/UI/package.json
+++ b/UI/package.json
@@ -24,7 +24,7 @@
     "zone.js": "^0.11.3"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^0.1100.7",
+    "@angular-devkit/build-angular": "^0.1101.1",
     "@angular/cli": "^11.1.1",
     "@angular/compiler-cli": "^11.1.0",
     "@types/jasmine": "^3.6.3",
@@ -43,6 +43,6 @@
     "ts-node": "^9.1.1",
     "tslib": "^2.1.0",
     "tslint": "~6.1.3",
-    "typescript": "~4.0.0"
+    "typescript": "^4.1.3"
   }
 }
