--- a/UI/package.json
+++ b/UI/package.json
@@ -12,37 +12,37 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^11.1.0",
-    "@angular/common": "^11.1.0",
-    "@angular/compiler": "^11.1.0",
-    "@angular/core": "^11.1.0",
-    "@angular/forms": "^11.1.0",
-    "@angular/platform-browser": "^11.1.0",
-    "@angular/platform-browser-dynamic": "^11.1.0",
-    "@angular/router": "^11.1.0",
-    "rxjs": "~6.6.3",
+    "@angular/animations": "^11.2.11",
+    "@angular/common": "^11.2.11",
+    "@angular/compiler": "^11.2.11",
+    "@angular/core": "^11.2.11",
+    "@angular/forms": "^11.2.11",
+    "@angular/platform-browser": "^11.2.11",
+    "@angular/platform-browser-dynamic": "^11.2.11",
+    "@angular/router": "^11.2.11",
+    "rxjs": "~6.6.7",
     "zone.js": "^0.11.4"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^0.1102.1",
-    "@angular/cli": "^11.2.1",
-    "@angular/compiler-cli": "^11.2.2",
-    "@types/jasmine": "^3.6.4",
+    "@angular-devkit/build-angular": "^0.1102.10",
+    "@angular/cli": "^11.2.10",
+    "@angular/compiler-cli": "^11.2.11",
+    "@types/jasmine": "^3.6.9",
     "@types/jasminewd2": "~2.0.3",
     "@types/jquery": "^3.5.5",
-    "@types/node": "^14.14.31",
+    "@types/node": "^14.14.41",
     "codelyzer": "^6.0.0",
-    "jasmine-core": "~3.6.0",
-    "jasmine-spec-reporter": "^6.0.0",
-    "karma": "^6.1.1",
+    "jasmine-core": "^3.7.1",
+    "jasmine-spec-reporter": "^7.0.0",
+    "karma": "^6.3.2",
     "karma-chrome-launcher": "~3.1.0",
     "karma-coverage-istanbul-reporter": "~3.0.2",
     "karma-jasmine": "~4.0.0",
     "karma-jasmine-html-reporter": "^1.5.0",
     "protractor": "~7.0.0",
     "ts-node": "^9.1.1",
-    "tslib": "^2.1.0",
+    "tslib": "^2.2.0",
     "tslint": "~6.1.3",
-    "typescript": "^4.1.5"
+    "typescript": "4.1.5"
   }
 }
