--- a/UI/package.json
+++ b/UI/package.json
@@ -20,6 +20,7 @@
     "@angular/platform-browser": "^11.2.11",
     "@angular/platform-browser-dynamic": "^11.2.11",
     "@angular/router": "^11.2.11",
+    "ngx-device-detector": "^2.0.7",
     "rxjs": "~6.6.7",
     "zone.js": "^0.11.4"
   },
