--- a/API/jimcrockett.api/jimcrockett.api.csproj
+++ b/API/jimcrockett.api/jimcrockett.api.csproj
@@ -1,11 +1,15 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
     <AzureFunctionsVersion>v3</AzureFunctionsVersion>
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="Microsoft.Azure.Functions.Extensions" Version="1.0.0" />
+    <PackageReference Include="Microsoft.Azure.Functions.Extensions" Version="1.1.0" />
     <PackageReference Include="Microsoft.NET.Sdk.Functions" Version="3.0.9" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\jimcrockett.data\jimcrockett.data.csproj" />
+    <ProjectReference Include="..\jimcrockett.chat\jimcrockett.chat.csproj" />
   </ItemGroup>
   <ItemGroup>
     <None Update="host.json">
@@ -15,11 +19,5 @@
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
       <CopyToPublishDirectory>Never</CopyToPublishDirectory>
     </None>
-  </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Models\" />
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\jimcrockett.Data\jimcrockett.Data.csproj" />
   </ItemGroup>
 </Project>
