Update some tests; update dependencies

--- a/UI/angular.json
+++ b/UI/angular.json
@@ -21,8 +21,7 @@
             "index": "src/index.html",
             "main": "src/main.ts",
             "polyfills": "src/polyfills.ts",
-            "tsConfig": "tsconfig.app.json",
-            "aot": true,     
+            "tsConfig": "tsconfig.app.json",     
             "allowedCommonJsDependencies": [
             ],
             "assets": [
@@ -36,7 +35,13 @@
               "src/styles.scss",
               "src/fonts.scss"
             ],
-            "scripts": []
+            "scripts": [],
+            "vendorChunk": true,
+            "extractLicenses": false,
+            "buildOptimizer": false,
+            "sourceMap": true,
+            "optimization": false,
+            "namedChunks": true
           },
           "configurations": {
             "production": {
@@ -50,7 +55,6 @@
               "outputHashing": "all",
               "sourceMap": false,
               "namedChunks": false,
-              "aot": true,
               "extractLicenses": true,
               "vendorChunk": false,
               "buildOptimizer": true,
