--- a/UI/package.json
+++ b/UI/package.json
@@ -8,42 +8,42 @@
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e",
-    "prod-build": "ng build --prod --build-optimizer"
+    "prod-build": "ng build --configuration=production --build-optimizer"
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^12.0.0",
-    "@angular/common": "^12.0.0",
-    "@angular/compiler": "^12.0.0",
-    "@angular/core": "^12.0.0",
-    "@angular/forms": "^12.0.0",
-    "@angular/platform-browser": "^12.0.0",
-    "@angular/platform-browser-dynamic": "^12.0.0",
-    "@angular/router": "^12.0.0",
-    "ngx-device-detector": "^2.0.10",
-    "rxjs": "^7.0.1",
+    "@angular/animations": "^12.1.1",
+    "@angular/common": "^12.1.1",
+    "@angular/compiler": "^12.1.1",
+    "@angular/core": "^12.1.1",
+    "@angular/forms": "^12.1.1",
+    "@angular/platform-browser": "^12.1.1",
+    "@angular/platform-browser-dynamic": "^12.1.1",
+    "@angular/router": "^12.1.1",
+    "ngx-device-detector": "^2.1.1",
+    "rxjs": "^7.2.0",
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^12.0.0",
-    "@angular/cli": "^12.0.0",
-    "@angular/compiler-cli": "^12.0.0",
-    "@types/jasmine": "^3.7.4",
-    "@types/jasminewd2": "^2.0.9",
-    "@types/jquery": "^3.5.5",
-    "@types/node": "^15.3.0",
+    "@angular-devkit/build-angular": "^12.1.1",
+    "@angular/cli": "^12.1.1",
+    "@angular/compiler-cli": "^12.1.1",
+    "@types/jasmine": "^3.8.1",
+    "@types/jasminewd2": "^2.0.10",
+    "@types/jquery": "^3.5.6",
+    "@types/node": "^16.3.1",
     "codelyzer": "^6.0.2",
-    "jasmine-core": "^3.7.1",
+    "jasmine-core": "^3.8.0",
     "jasmine-spec-reporter": "^7.0.0",
-    "karma": "^6.3.2",
+    "karma": "^6.3.4",
     "karma-chrome-launcher": "~3.1.0",
     "karma-coverage": "^2.0.3",
     "karma-jasmine": "~4.0.0",
-    "karma-jasmine-html-reporter": "^1.6.0",
+    "karma-jasmine-html-reporter": "^1.7.0",
     "protractor": "~7.0.0",
-    "ts-node": "^9.1.1",
-    "tslib": "^2.2.0",
+    "ts-node": "^10.1.0",
+    "tslib": "^2.3.0",
     "tslint": "~6.1.3",
-    "typescript": "4.2.4"
+    "typescript": "^4.3.5"
   }
 }
